--- a/src/style.scss
+++ b/src/style.scss
@@ -95,10 +95,10 @@
   justify-content: center;
 
   .container {
-    border: 1px solid white;
-    border-radius: 10px;
-    width: 65%;
-    height: 80%;
+    // border: 1px solid white;
+    // border-radius: 10px;
+    width: 100%;
+    height: 100%;
     display: flex;
     overflow: hidden;
     @include tablet {
@@ -107,13 +107,13 @@
 
     .sidebar {
       flex: 1;
-      background-color: #3e3c61;
+      background-color: #03001C;
       position: relative;
 
       .navbar {
         display: flex;
         align-items: center;
-        background-color: #2f2d52;
+        background-color: #03001C;
         height: 50px;
         padding: 10px;
         justify-content: space-between;
@@ -121,6 +121,7 @@
 
         .logo {
           font-weight: bold;
+          font-size: 30px;
           @include tablet {
             display: none;
           }
@@ -206,7 +207,7 @@
 
       .chatInfo {
         height: 50px;
-        background-color: #5d5b8d;
+        background-color: #03001C;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -225,7 +226,7 @@
       }
 
       .messages {
-        background-color: #ddddf7;
+        background-color: #0C0C0C;
         padding: 10px;
         height: calc(100% - 160px);
         overflow: scroll;
@@ -264,6 +265,9 @@
             img {
               width: 50%;
             }
+            video {
+              width: 50%;
+            }
           }
 
           &.owner {
@@ -272,7 +276,7 @@
             .messageContent {
               align-items: flex-end;
               p {
-                background-color: #8da4f1;
+                background-color: #5AB2FF;
                 color: white;
                 border-radius: 10px 0px 10px 10px;
               }
@@ -315,11 +319,147 @@
             border: none;
             padding: 10px 15px;
             color: white;
-            background-color: #8da4f1;
+            background-color: #5AB2FF;
             cursor: pointer;
           }
         }
       }
     }
   }
+}
+
+
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Lato&family=Libre+Baskerville&family=Merriweather:wght@700&family=Work+Sans&display=swap");
+
+.voice-capture * {
+  margin: 0;
+  padding: 0;
+  // box-sizing: border-box;
+  font-family: "Work Sans", sans-serif;
+}
+
+.voice-capture {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  background: #0C0C0C;
+}
+
+.voice-capture .container {
+  padding: 50px;
+  margin-top: 80px;
+}
+
+
+.voice-capture h2 {
+  color: rgb(255 255 255);
+  text-align: center;
+  font-size: 48px;
+  letter-spacing: -0.2px;
+  font-family: "Merriweather", serif;
+  margin-bottom: 40px;
+}
+
+// .voice-capture p {
+//   max-width: 50rem;
+//   text-align: center;
+//   margin-top: 24px;
+//   margin-bottom: 100px;
+// }
+
+.voice-capture .main-content {
+  max-width: 50rem;
+  width: 100%;
+  min-height: 400px;
+  height: auto;
+  padding: 18px 18px 120px 18px;
+  position: relative;
+  resize: none;
+  box-shadow: 0 12px 48px 0px rgb(109 117 141 / 20%);
+  background: #31363F;
+  border: 0.5px solid #0C0C0C;
+  color: rgb(231 233 245);
+  border-radius: 16px;
+}
+
+.voice-capture .main-content:focus {
+  border: 0.3px solid rgb(43, 45, 56, 0.3);
+  outline: none;
+}
+
+.voice-capture .main-content {
+  font-size: 18px;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+  line-height: 1.6;
+}
+
+.voice-capture .btn-style {
+  display: flex;
+}
+
+.voice-capture button {
+  background: #5AB2FF;
+  color: rgb(255 255 255);
+  border-radius: 6px;
+  padding: 16px 32px;
+  border: none;
+  font-size: 18px;
+  letter-spacing: 1px;
+  margin: auto;
+  display: flex;
+  position: relative;
+  margin-top: -80px;
+  cursor: pointer;
+}
+
+.voice-capture button:focus,
+.voice-capture button:hover {
+  background: #5AB2FF;
+  box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 768px) {
+  .voice-capture .container {
+    margin-top: 20px;
+  }
+
+  .voice-capture h2 {
+    font-size: 28px;
+    // margin-bottom: 40px;
+  }
+
+  // .voice-capture p {
+  //   font-size: 16px;
+  //   word-spacing: normal;
+  //   margin-bottom: 2px;
+  //   margin-top: 5px;
+  // }
+
+  .voice-capture .main-content {
+    font-size: 16px;
+    word-spacing: normal;
+  }
+
+  .voice-capture button {
+    padding: 20px 28px;
+    font-size: 16px;
+    margin-top: -70px;
+  }
+}
+
+.video-capture {
+  background: #0C0C0C;
+  padding-bottom: 250px;
+}
+
+.video-capture button {
+  padding: 10px 10px;
+  font-size: 16px;
+  margin-top: 100px;
+}
+
+.video-capture canvas {
+  margin-bottom: 10px;
 }
